--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header class="header">
       <div class="container">
         <figure class="logo">
-          <img src="images/logo(1).png" height="50" alt="Logo de http://leonidasesteban.com" />
+          <img src="images/logo(1).png" srcset="images/logo(1).png, images/logo(1)@2x.png 2x" height="50" alt="Logo de http://leonidasesteban.com" />
         </figure>
         <nav class="menu">
           <ol>
@@ -36,7 +36,7 @@
         <h1>
           Hola! Soy <strong>Leonidas Esteban</strong> <br/> Desarrollador  <strong>Javascript</strong> con <br> pasión por la <strong>enseñanza</strong>
         </h1>
-        <img class="hero-image" src="images/hero.png" width="500" height="300" alt="imagen principal del sitio"> 
+        <img class="hero-image" src="images/hero.png" scrset="images/hero.png, images/hero@2x.png 2x" width="500" height="300" alt="imagen principal del sitio"> 
       </div>
     </section>
     <section id="portafolio" class="portfolio">
@@ -81,7 +81,7 @@
       <div class="container">
         <article class="event">
           <figure class="event-imageContainer">
-            <img class="event-image" src="images/platzi-conf.png" width="500" />
+            <img class="event-image" src="images/platzi-conf.png" scrset="images/platzi-conf.png, images/platzi-conf@2x.png 2x" width="500" />
           </figure>
           <div class="event-detail">
             <h3 class="event-title">PlatziConf México 2018</h3>
@@ -115,7 +115,7 @@
         </article>
         <article class="event">
           <figure class="event-imageContainer">
-            <img class="event-image" src="images/platzi-conf.png" width="500" />
+            <img class="event-image" src="images/platzi-conf.png" scrset="images/platzi-conf.png, images/platzi-conf@2x.png 2x" width="500" />
           </figure>
           <div class="event-detail">
             <h3 class="event-title">PlatziConf México 2018</h3>
@@ -143,7 +143,7 @@
     <footer class="footer">
       <div class="container">
         <div>
-          <p>Curso de Desarrollo web online 2018 <img src="images/platzi(1).png" width="80" alt="platzi"></p>
+          <p>Curso de Desarrollo web online 2018 <img src="images/platzi(1).png" srcset="images/platzi(1).png, images/platzi(1)@2x.png 2x" width="80" alt="platzi"></p>
         </div>
         <div>
           <p>
